test/expected/explain_fcv_v.out
explain void f(const void)
               ^
16: error: "void" parameters can not be "const"
